# Adam_mcp

./: .env  .envrc  .gitignore  .mcp.json  .pre-commit-config.yaml  BRIEF.md  CLAUDE.md  CLAUDE_DEV.md  DEMO_PLAN.md  DISCOVERY_TOOL_PROPOSAL.md  MIGRATION_PLAN.md  MVP_IMPLEMENTATION.md  NOTES.md  PLANNING.md  PROMPTS.md  README.md  create_simple_part.py  freecad_env.py  pyproject.toml  test_cad_tools.py
context/: DECISIONS.md  DEMO.md  OPERATIONS.md  README.md  TOOLS.md  WORKFLOW.md
dev_projects/test_samples/: bolt_head_m10.FCStd  bolt_head_m10_work.FCStd  washer_m10.FCStd
src/adam_mcp/: __init__.py  constants.py  freecad_env.py  models.py  server.py  utils.py  working_files.py
src/adam_mcp/constants/: __init__.py  dimensions.py  messages.py  operations.py  paths.py
src/adam_mcp/core/: __init__.py  freecad_env.py  server.py  working_files.py
src/adam_mcp/models/: __init__.py  base.py  responses.py
src/adam_mcp/models/operations/: __init__.py  booleans.py  features.py  modifications.py  primitives.py  sketches.py
src/adam_mcp/operations/: __init__.py  dispatcher.py
src/adam_mcp/operations/handlers/: booleans.py  features.py  modifications.py  primitives.py  sketches.py
src/adam_mcp/operations/validators/: geometry.py  references.py
src/adam_mcp/tools/: __init__.py  cad_operations.py  discovery.py  document.py  execution.py  query.py
src/adam_mcp/utils/: __init__.py  errors.py  freecad.py  paths.py  validation.py
