[project]
name = "adam-mcp"
version = "0.1.0"
description = "FreeCAD MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Note: FreeCAD must be installed separately via system package manager
    # macOS: brew install freecad
    # Linux: sudo apt-get install freecad (or equivalent)
    "fastmcp>=1.0.0,<2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
adam-mcp = "adam_mcp.core.server:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adam_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict = true

[[tool.mypy.overrides]]
module = "FreeCAD.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "Part.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = []
